--- a/.github/workflows/verbose.yml
+++ b/.github/workflows/verbose.yml
@@ -21,8 +21,28 @@ jobs:
         uses: golangci/golangci-lint-action@v2
       - name: run linter
         run: ./bin/task lint
+  build:
+    name: Build verbose
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [test, lint]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goos: [linux, darwin]
+        goarch: [amd64]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+      - name: install task
+        run: curl -Ls https://git.io/ttask.sh | sh
+      - run: ./bin/task bin
+      - run: mv ci-build/verbose ci-build/verbose_${{ matrix.goos }}_${{ matrix.goarch }}
+      - uses: actions/upload-artifact@master
+        with:
+          name: build-artifacts
+          path: ci-build
   release:
-    name: Release blogctl
+    name: Release verbose
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: build
